feat : guide ResponseList 구현 및 collector toList() 수정